Fix unnecessary horizontal scroll caused by align wide/full items inside of column block

--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ body .gform_wrapper .gfield_description.validation_message {padding: 0 0 0.6rem;
      * Add support for align-wide blocks
      */
     .no-sidebar .alignwide, .no-sidebar .alignfull {width: 100vw; max-width: var(--site-max-width); margin-left: calc(50% - min(50vw, calc(var(--site-max-width) / 2))); /* to "break free" of container */}
+    .no-sidebar .wp-block-column :is(.alignwide, .alignfull) {max-width: var(--row-max-width); margin: 0 auto;}
     .no-sidebar :is(.alignwide, .alignfull) > *:not(.alignwide, .alignfull, .full, img, .wp-block-cover__background, .wp-block-cover__image-background, .panel-slider-wrapper) {max-width: var(--row-max-width); margin: 0 auto; padding-left: var(--gutter); padding-right: var(--gutter);}
     
     /**
